plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dev.lorena'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok:1.18.44'
	annotationProcessor 'org.projectlombok:lombok:1.18.44'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'software.amazon.awssdk:s3:2.42.25'
	implementation 'org.apache.commons:commons-lang3:3.20.0'
	implementation 'org.apache.tika:tika-core:3.3.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('bootRun') {
	sourceResources sourceSets.main
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('--enable-preview')
}

tasks.withType(JavaExec).configureEach {
	jvmArgs('--enable-preview')
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs('--enable-preview')
}
